[gd_scene load_steps=6 format=3 uid="uid://cmnx5a3g8gg7m"]

[ext_resource type="Script" path="res://Player/Attack/eye.gd" id="1_iby2b"]
[ext_resource type="Texture2D" uid="uid://ba6564k8qpjvj" path="res://Textures/Items/Weapons/eye_ult.png" id="2_wlnsc"]

[sub_resource type="Animation" id="Animation_wllmw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_hronh"]
resource_name = "pre_hit"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 2, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mb5vv"]
_data = {
"RESET": SubResource("Animation_wllmw"),
"pre_hit": SubResource("Animation_hronh")
}

[node name="Eye" type="Node2D"]
z_index = 2
scale = Vector2(0.2, 0.2)
script = ExtResource("1_iby2b")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0.741176)
show_behind_parent = true
scale = Vector2(0.7, 0.7)
texture = ExtResource("2_wlnsc")
hframes = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Duration" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mb5vv")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_duration_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
